fix : spacing issue

--- a/assets/css/unminified/frontend/form.css
+++ b/assets/css/unminified/frontend/form.css
@@ -5,6 +5,7 @@
   margin: 0 -0.3em;
 }
 .srfm-form-container .srfm-form .srfm-block-single,
+.srfm-form-container .srfm-form .srfm-submit-container,
 .srfm-form-container .srfm-form .uagb-block {
   padding: 0 0.3em;
 }
