--- a/sass/common.scss
+++ b/sass/common.scss
@@ -2,7 +2,6 @@
 .srfm-form-container {
 	// This is the parent form class. Adds specificity so that there is no conflict.
 	position: relative;
-	padding: 32px;
 	background-image: var( --srfm-bg-image );
 	background-size: cover;
 	background-position: center;
@@ -47,4 +46,9 @@
 		font-size: 0.7em;
 		cursor: pointer;
 	}
+}
+
+.block-editor-page.post-type-sureforms_form .is-root-container,
+body.single-sureforms_form .srfm-form-container {
+	padding: 32px;
 }
